--- a/html/wz/new_job_letter05.html
+++ b/html/wz/new_job_letter05.html
@@ -142,7 +142,7 @@
                                       <!-- 추천정보 더보기 -->
                                       <tr>
                                         <td style="padding-top: 30px; text-align: center;">
-                                          <a href="https://www.jobaba.net/empmn/enterpriseEmployListNew.do" target="_blank">
+                                          <a href="https://www.jobaba.net/pblcEmpmn/list.do" target="_blank">
                                             <span style="display: inline-block; width: 320px; padding: 14px 0 14px 0; background-color: #003281; color: #ffffff; font-size: 20px; font-weight: bold; border-radius: 10px 10px 10px 10px; box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.15);">공공일자리 추천정보 더보기</span>
                                           </a>
                                         </td>
