--- a/html/wz/wz332.html
+++ b/html/wz/wz332.html
@@ -90,8 +90,8 @@
                       </tr> 
                       <tr>
                         <td>
-                          <a href="#" target="_blank" style="text-decoration: none;">
-                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz331/wz331_01.png" alt="경기청년 일자리 매치업 취업지원 청년 참여자 모집" width="800" style="display: block;width: 100%">
+                          <a href="https://lms.jobaba.net/gjf/service/ca/board_detail.do?BOARD_CODE=NOTICE&BOARD_NUM=26465" target="_blank" style="text-decoration: none;">
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz332/wz332_01.png" alt="취업역량강화 챌린지 참여자 모집" width="800" style="display: block;width: 100%">
                           </a>
                         </td>
                       </tr> 
@@ -115,13 +115,13 @@
                                       <tbody> 
                                         <tr>
                                           <td>
-                                            <a href="https://www.jobaba.net/sprtPlcy/info/view2020.do?seq=13216" target="_blank">
-                                              <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz331/wz331_02.png" alt="커리어 부트캠프 사업 프로젝트 참여자 모집" width="360" style="display: block;">
+                                            <a href="https://www.jobaba.net/sprtPlcy/info/view2020.do?seq=13630" target="_blank">
+                                              <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz332/wz332_02.png" alt="2024년 경기도 청년 면접수당	" width="360" style="display: block;">
                                             </a>
                                           </td>
                                           <td>
-                                            <a href="https://www.jobaba.net/edutrn/dtl2020.do?seq=245037" target="_blank">
-                                              <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz331/wz331_03.png" alt="플랫폼노동자 안전교육사업 이륜차 주행실습 교육생 모집" width="360" style="display: block;">
+                                            <a href="https://www.jobaba.net/edutrn/dtl2020.do?seq=244983" target="_blank">
+                                              <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz332/wz332_03.png" alt="경기도기술학교 직무역량향상과정" width="360" style="display: block;">
                                             </a>
                                           </td>
                                         </tr>
@@ -138,13 +138,13 @@
                                     <tbody>
                                       <tr>
                                         <td>
-                                          <a href="https://www.jobaba.net/edutrn/dtl2020.do?seq=244967" target="_blank">
-                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz331/wz331_04.png" alt="여성전문기술교육 웹디자인 전문인력 양성과정" width="360" style="display: block;">
+                                          <a href="https://www.jobaba.net/edutrn/dtl2020.do?seq=245026" target="_blank">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz332/wz332_04.png" alt="'파이썬으로 추천시스템 만들기' 교육" width="360" style="display: block;">
                                           </a>
                                         </td>                                       
                                         <td>
-                                          <a href="https://www.jobaba.net/sprtPlcy/info/view2020.do?seq=13638" target="_blank">
-                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz331/wz331_05.png" alt="일생활균형 상담지원사업 그룹코칭 7회차" width="360" style="display: block;">
+                                          <a href="https://www.jobaba.net/sprtPlcy/info/view2020.do?seq=13665" target="_blank">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz332/wz332_05.png" alt="2024년 청년 이사비 및 중개보수비 지원 사업" width="360" style="display: block;">
                                           </a>
                                         </td>                                        
                                       </tr>
@@ -161,13 +161,13 @@
                                     <tbody>
                                       <tr>
                                         <td>
-                                          <a href="https://www.jobaba.net/edutrn/dtl2020.do?seq=245053" target="_blank">
-                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz331/wz331_06.png" alt="디지털마케팅전문가 교육생 모집" width="360" style="display: block;">
+                                          <a href="https://www.jobaba.net/edutrn/dtl2020.do?seq=245097" target="_blank">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz332/wz332_06.png" alt="초등 융합코딩강사 양성과정" width="360" style="display: block;">
                                           </a>
                                         </td>                                       
                                         <td>
-                                          <a href="https://www.jobaba.net/edutrn/dtl2020.do?seq=245064" target="_blank">
-                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz331/wz331_07.png" alt="K-시흥 미래 신산업분야 전문인력 양성과정" width="360" style="display: block;">
+                                          <a href="https://www.jobaba.net/edutrn/dtl2020.do?seq=245110" target="_blank">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz332/wz332_07.png" alt="매출을 높이는 SNS 마케팅 교육" width="360" style="display: block;">
                                           </a>
                                         </td>                                        
                                       </tr>
@@ -188,14 +188,14 @@
                       <tr>
                         <td>
                           <a href="https://www.jobaba.net/jobDiagnose/diagnoseView.do" target="_blank" style="text-decoration: none;">
-                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz331/wz331_08.png" alt="잡아바 취업진로진단검사" width="800" style="display: block;">                                
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz332/wz332_08.png" alt="잡아바 취업진로진단검사" width="800" style="display: block;">                                
                           </a>
                         </td>
                       </tr>
                       <tr>
                         <td>
-                          <a href="https://moaform.com/q/ddIrCy" target="_blank" style="text-decoration: none;">
-                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz331/wz331_09.png" alt="취업지원서비스 대상자 수요조사" width="800" style="display: block;">                                
+                          <a href="https://gg.saramin.co.kr/service/gg/index.asp" target="_blank" style="text-decoration: none;">
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz332/wz332_09.png" alt="하반기 경기도 공공기관 통합채용" width="800" style="display: block;">                                
                           </a>
                         </td>
                       </tr>
@@ -213,29 +213,29 @@
                             <tbody>                             
                               <tr>
                                 <td align="center">
-                                  <a href="https://apply.jobaba.net/bsns/bsnsDetailView.do?bsnsSeq=3624" target="_blank" style="text-decoration: none;">      
-                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz331/wz331_10.png" alt="[경기도농업기술원 선인장다육식물연구소] 기간제노동자 채용" width="740" style="vertical-align: top;">
+                                  <a href="https://apply.jobaba.net/bsns/bsnsDetailView.do?bsnsSeq=3604" target="_blank" style="text-decoration: none;">      
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz332/wz332_10.png" alt="[경기도보건환경연구원] 기간제근로자 채용 공고" width="740" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
                               <tr>
                                 <td align="center">
-                                  <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14595" target="_blank" style="text-decoration: none;">      
-                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz331/wz331_11.png" alt="[여주세종문화관광재단] 직원 채용공고" width="740" style="vertical-align: top;">
+                                  <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=15354" target="_blank" style="text-decoration: none;">      
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz332/wz332_11.png" alt="[경기도일자리재단] 제10차 유기계약직 직원 채용공고" width="740" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
                               <tr>
                                 <td align="center">
-                                  <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14601" target="_blank" style="text-decoration: none;">      
-                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz331/wz331_12.png" alt="[여주시 농산업 공동브랜드 활성화센터] 직원 채용공고" width="740" style="vertical-align: top;">
+                                  <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14965" target="_blank" style="text-decoration: none;">      
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz332/wz332_12.png" alt="[화성시인재육성재단] 2024년 제11차 직원 공개채용 공고" width="740" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
                               <tr>
                                 <td align="center">
-                                  <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=14921" target="_blank" style="text-decoration: none;">      
-                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz331/wz331_13.png" alt="[경기아트센터] 2024년 제4차 기간제근로자 공개모집 공고" width="740" style="vertical-align: top;">
+                                  <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=15057" target="_blank" style="text-decoration: none;">      
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz332/wz332_13.png" alt="[시흥도시공사] 2024년 하반기 수시 직원 채용 공고" width="740" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
