--- a/index.html
+++ b/index.html
@@ -313,6 +313,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/new_job_letter05.html" class="preview" target="_blank">공공일자리 뉴스레터 ver05</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz332.html" class="preview" target="_blank">뉴스레터 332호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
