--- a/index.html
+++ b/index.html
@@ -318,6 +318,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz332.html" class="preview" target="_blank">뉴스레터 332호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/corp/corp08.html" class="preview" target="_blank">기업회원 뉴스레터 8월호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
