--- a/html/thema/08.html
+++ b/html/thema/08.html
@@ -70,6 +70,7 @@
 				</div>
 			</div>
 		</article>
+		
 		<article id="moveTo01" class="contList cont01">
 			<div class="topImg">
 				<h3><img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont01_tit.png" alt="취업지원"></h3>
@@ -77,7 +78,7 @@
 			<div class="innerSection">
 				<div class="jobList">
 					<ul>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=288">
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont01_job01.png" alt="[경기도] 2024년 경기도 청년면접수당 모집">
 							</div>
@@ -93,7 +94,7 @@
 								</dl>
 							</div>
 						</a></li>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=205">
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont01_job02.png" alt="경기도 청년 커리어부트캠프">
 							</div>
@@ -109,7 +110,7 @@
 								</dl>
 							</div>
 						</a></li>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=87">
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont01_job03.png" alt="[경기도] 경기청년역량강화 기회 지원 사업">
 							</div>
@@ -125,7 +126,7 @@
 								</dl>
 							</div>
 						</a></li>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=83">
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont01_job04.png" alt="경기청년 일자리 매치업 취업지원(3차)">
 							</div>
@@ -142,7 +143,7 @@
 								</dl>
 							</div>
 						</a></li>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=214">
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont01_job05.png" alt="청년 국가기술자격시험 응시료 지원사업">
 							</div>
@@ -170,11 +171,12 @@
 						<span>#국민취업지원제도 #취업지원 #취창업준비</span>
 					</div>
 					<div class="linkBtn">
-						<a href="" target="_blank">GO →</a>
+						<a href="https://www.jobaba.net/thema/5538/0A" target="_blank">GO →</a>
 					</div>
 				</div>
 			</div>
 		</article>
+	
 		<article id="moveTo02" class="contList cont02">
 			<div class="topImg">
 				<h3><img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont02_tit.png" alt="재직자 지원"></h3>
@@ -182,7 +184,7 @@
 			<div class="innerSection">
 				<div class="jobList">
 					<ul>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=276">
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont02_job01.png" alt="[경기도] 중소기업 청년 노동자 지원사업 2차">
 							</div>
@@ -198,7 +200,7 @@
 								</dl>
 							</div>
 						</a></li>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=168">
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont02_job02.png" alt="2024 근로자 휴가지원사업">
 							</div>
@@ -214,7 +216,7 @@
 								</dl>
 							</div>
 						</a></li>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=215">
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont02_job03.png" alt="청년도약계좌">
 							</div>
@@ -230,7 +232,7 @@
 								</dl>
 							</div>
 						</a></li>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=232">
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont02_job04.png" alt="중소기업 취업자 소득세 감면">
 							</div>
@@ -246,7 +248,7 @@
 								</dl>
 							</div>
 						</a></li>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=107">
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont02_job05.png" alt="2024 건설근로자 종합검진 무료 지원">
 							</div>
@@ -273,7 +275,7 @@
 						<span>#중소기업청년 #전월세보증금대출 #전월세대출</span>
 					</div>
 					<div class="linkBtn">
-						<a href="" target="_blank">GO →</a>
+						<a href="https://www.jobaba.net/thema/5557/0A" target="_blank">GO →</a>
 					</div>
 				</div>
 			</div>
@@ -285,7 +287,7 @@
 			<div class="innerSection">
 				<div class="jobList">
 					<ul>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=320">
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont03_job01.png" alt="청년 기본소득 3분기">
 							</div>
@@ -301,7 +303,7 @@
 								</dl>
 							</div>
 						</a></li>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=322">
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont03_job02.png" alt="청년월세 특별지원 2차">
 							</div>
@@ -317,7 +319,7 @@
 								</dl>
 							</div>
 						</a></li>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=260">
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont03_job03.png" alt="경기청년 기회사다리통장">
 							</div>
@@ -333,7 +335,7 @@
 								</dl>
 							</div>
 						</a></li>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=323">
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont03_job04.png" alt="청년 맞춤형 재무상담 금융어드바이저 서비스 사업">
 							</div>
@@ -350,7 +352,7 @@
 								</dl>
 							</div>
 						</a></li>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=321">
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont03_job05.png" alt="2024년 청년 이사비 및 중개보수비 지원 사업 2차">
 							</div>
@@ -377,7 +379,7 @@
 						<span>#청년정책 #제대군인정책 #창업정책</span>
 					</div>
 					<div class="linkBtn">
-						<a href="" target="_blank">GO →</a>
+						<a href="https://www.jobaba.net/thema/5551/0A" target="_blank">GO →</a>
 					</div>
 				</div>
 			</div>
@@ -389,7 +391,7 @@
 			<div class="innerSection">
 				<div class="jobList">
 					<ul>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=280">
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont04_job01.png" alt="2024년 경기 베이비부머 해외진출 사업 참여자 모집">
 							</div>
@@ -405,7 +407,7 @@
 								</dl>
 							</div>
 						</a></li>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=151">
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont04_job02.png" alt="2024년도 해외 일경험 지원사업 WELL">
 							</div>
@@ -422,7 +424,7 @@
 								</dl>
 							</div>
 						</a></li>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=163">
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont04_job03.png" alt="2024년도 해외취업정착지원금 사업">
 							</div>
@@ -438,7 +440,7 @@
 								</dl>
 							</div>
 						</a></li>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/entCntnts/exhb/exhbViewNew.do?seq=135&exhbType=1">
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont04_job04.png" alt="2024년「경기청년 해외진출(독일)」해외채용관">
 							</div>
@@ -466,7 +468,7 @@
 			<div class="innerSection">
 				<div class="jobList">
 					<ul>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/jobSprt/detail.do?seq=106">
 							<div class="flag">중장년</div>
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont05_job01.png" alt="경기도베이비부머일자리기회센터 일자리 상담">
@@ -483,7 +485,7 @@
 								</dl>
 							</div>
 						</a></li>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/empmEdu/detail.do?seq=19173">
 							<div class="flag style02">교육</div>
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont05_job02.png" alt="2024년 도배시공 과정 3차 무료교육생 모집">
@@ -500,7 +502,7 @@
 								</dl>
 							</div>
 						</a></li>
-						<li><a href="">
+						<li><a href="https://www.jobaba.net/empmEdu/detail.do?seq=14156">
 							<div class="flag style02">교육</div>
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont05_job03.png" alt="파이썬으로 추천시스템 만들기 교육생 모집">
@@ -517,7 +519,7 @@
 								</dl>
 							</div>
 						</a></li>
-						<li><a href="">
+						<li><a href="https://lms.jobaba.net/">
 							<div class="flag style02">교육</div>
 							<div class="imgWrap">
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont05_job04.png" alt="잡아바 러닝센터">
@@ -539,47 +541,47 @@
 						<span>#퇴직연금 #미수령퇴직연금 #숨은퇴직연금</span>
 					</div>
 					<div class="linkBtn">
-						<a href="" target="_blank">GO →</a>
+						<a href="https://www.jobaba.net/thema/5553/0A" target="_blank">GO →</a>
 					</div>
 				</div>
 			</div>
 		</article>
-		<style>
-			
-		</style>
+			 
 		<article class="cont06">
 			<div class="innerSection">
 				<p class="gBold">지역, 생애주기, 취업상태에 따라<br>
 					<span class="gBold">나에게 필요한 정책만 골라서 확인</span>해보세요</p>
 				<div class="linkBtn">
-					<a href=""><span class="gBold">더 많은 지원정책 알아보기 →</span></a>
+					<a href="https://www.jobaba.net/sprtPlcy/info/list2020.do"><span class="gBold">더 많은 지원정책 알아보기 →</span></a>
 				</div>				
 			</div>
 		</article>
+
 		<article class="cont07">
 			<div class="innerSection">
 				<div class="titWrap">
 					<p class="gBold">JOBaba<br> 취업지원 서비스</p>
 				</div>
 				<ul class="linkList">
-					<li><a href="">
+					<li><a href="https://www.jobaba.net/mber/login/chkLogin.do?rtnPath=/mber/myPage/empmRcmdtnSrvc/detail.do">
 						<p class="gBold">취업추천서비스</p>
 					</a></li>
-					<li><a href="">
+					<li><a href="https://jobaba.channel.io/support-bots/64708">
 						<p class="gBold">잡아바 상담톡</p>
 					</a></li>
-					<li><a href="">
+					<li><a href="https://www.jobaba.net/introduction/mainList.do">
 						<p class="gBold">자소서 첨삭</p>
 					</a></li>
-					<li><a href="">
+					<li><a href="https://www.jobaba.net/interview/mainList.do">
 						<p class="gBold">AI역량검사</p>
 					</a></li>
-					<li><a href="">
+					<li><a href="https://www.jobaba.net/jobDiagnose/diagnoseView.do">
 						<p class="gBold">취업진단</p>
 					</a></li>
 				</ul>
 			</div>
 		</article>
+
 	</div>
 	<!--잡아바 js-->
 	<script type="text/javascript" charset="utf-8" src="https://www.jobaba.net/resource/js/jquery-1.11.3.js"></script>
@@ -622,7 +624,7 @@
             const $contents = $('.contList');
             const offsetMo = 0; // 메뉴 상단 고정 위치 (모바일)
             const offsetPC = 0; // 메뉴 상단 고정 위치 (PC)
-            const topMo = 106; // 스크롤 했을 때 컨텐츠 시작 위치 (모바일)
+            const topMo = 80; // 스크롤 했을 때 컨텐츠 시작 위치 (모바일)
             const topPc = 190; // 스크롤 했을 때 컨텐츠 시작 위치 (PC)
             const breakpoints = 640; // 모바일 사이즈 분기점
             let windowWidth = window.innerWidth;
