--- a/index.html
+++ b/index.html
@@ -323,6 +323,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/corp/corp08.html" class="preview" target="_blank">기업회원 뉴스레터 8월호</a></td>
 			</tr>
+			<tr class="thema">
+				<td></td>
+				<td>테마</td>
+				<td><a href="html/thema/08.html" class="preview" target="_blank">테마 8호 나에게 딱맞는 지원정책 모아보기</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
