--- a/html/thema/08.html
+++ b/html/thema/08.html
@@ -299,7 +299,7 @@
 								</dl>
 								<dl>
 									<dt>지원내용</dt>
-									<dd>분기별 25만원 / 연 100만원 복지포인트 지급</dd>
+									<dd>분기별 25만원 / 연 100만원 지역화폐 지급</dd>
 								</dl>
 							</div>
 						</a></li>
@@ -324,7 +324,7 @@
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont03_job03.png" alt="경기청년 기회사다리통장">
 							</div>
 							<div class="txtWrap">
-								<p class="tit">경기청년 기회사다리통장</p>
+								<p class="tit">경기청년 기회사다리금융</p>
 								<dl>
 									<dt>모집기간</dt>
 									<dd>상시 모집</dd>
@@ -347,7 +347,7 @@
 								</dl>
 								<dl>
 									<dt>지원내용</dt>
-									<dd>소득지출관리, 재무진단, 투자관련상담 등<br>
+									<dd>소득지출관리, 재무진단, 투자관련상담 등
 										청년 대상 무료 재무상담</dd>
 								</dl>
 							</div>
@@ -360,7 +360,7 @@
 								<p class="tit">2024년 청년 이사비 및 중개보수비 지원 사업 2차</p>
 								<dl>
 									<dt>모집기간</dt>
-									<dd>상시 모집</dd>
+									<dd>08.12.(월) ~ 09.06.(금)</dd>
 								</dl>
 								<dl>
 									<dt>지원내용</dt>
@@ -445,7 +445,7 @@
 								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240827/cont04_job04.png" alt="2024년「경기청년 해외진출(독일)」해외채용관">
 							</div>
 							<div class="txtWrap">
-								<p class="tit">2024년「경기청년 해외진출(독일)」해외채용관</p>
+								<p class="tit">2024년 「경기청년 해외진출(독일)」 해외채용관</p>
 								<dl>
 									<dt>모집기간</dt>
 									<dd>모집완료시까지</dd>
@@ -566,7 +566,7 @@
 					<li><a href="https://www.jobaba.net/mber/login/chkLogin.do?rtnPath=/mber/myPage/empmRcmdtnSrvc/detail.do">
 						<p class="gBold">취업추천서비스</p>
 					</a></li>
-					<li><a href="https://jobaba.channel.io/support-bots/64708">
+					<li><a href="https://jobaba.channel.io/bit.ly/JobabaChat">
 						<p class="gBold">잡아바 상담톡</p>
 					</a></li>
 					<li><a href="https://www.jobaba.net/introduction/mainList.do">
@@ -646,7 +646,7 @@
             const offsetMo = 0; // 메뉴 상단 고정 위치 (모바일)
             const offsetPC = 0; // 메뉴 상단 고정 위치 (PC)
             const topMo = 80; // 스크롤 했을 때 컨텐츠 시작 위치 (모바일)
-            const topPc = 190; // 스크롤 했을 때 컨텐츠 시작 위치 (PC)
+            const topPc = 140; // 스크롤 했을 때 컨텐츠 시작 위치 (PC)
             const breakpoints = 640; // 모바일 사이즈 분기점
             let windowWidth = window.innerWidth;
             let isMobile = window.innerWidth < breakpoints;
