--- a/index.html
+++ b/index.html
@@ -328,6 +328,11 @@
 				<td>테마</td>
 				<td><a href="html/thema/08.html" class="preview" target="_blank">테마 8호 나에게 딱맞는 지원정책 모아보기</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz333.html" class="preview" target="_blank">뉴스레터 333호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
