--- a/index.html
+++ b/index.html
@@ -333,6 +333,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz333.html" class="preview" target="_blank">뉴스레터 333호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/page/서부사업본부 기업DB.html" class="preview" target="_blank">서부사업본부 기업DB</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
