--- a/index.html
+++ b/index.html
@@ -338,6 +338,11 @@
 				<td>페이지</td>
 				<td><a href="html/page/서부사업본부 기업DB.html" class="preview" target="_blank">서부사업본부 기업DB</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/corp/learning01.html" class="preview" target="_blank">러닝센터 뉴스레터_01</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
