--- a/html/corp/learning02.html
+++ b/html/corp/learning02.html
@@ -94,7 +94,7 @@
                               </tr>
                               <tr>
                                 <td>
-                                  <a href="http://jobaba.net/mber/sbcs/emailUnsubscribe.do?seq=[$customerID]" target="_blank" style="outline: 0; border: 0 none;">
+                                  <a href="https://jobaba.net/mber/sbcs/emailUnsubscribe.do?seq=[$customerID]" target="_blank" style="outline: 0; border: 0 none;">
                                     <img alt="추후 메일 수신을 원하지 않으시면 여기 수신거부를 클릭하여 주시기 바랍니다."
                                       src="https://chaebonggi.github.io/jobabamain/html/corp/images/learning/footer02.png"
                                       style="vertical-align: top; border: 0"
