--- a/html/wz/wz333.html
+++ b/html/wz/wz333.html
@@ -278,7 +278,7 @@
                               </tr>
                               <tr>
                                 <td>
-                                  <a href="http://jobaba.net/mber/sbcs/emailUnsubscribe.do?seq=[$customerID]" target="_blank" style="outline: 0; border: 0 none;">
+                                  <a href="https://jobaba.net/mber/sbcs/emailUnsubscribe.do?seq=[$customerID]" target="_blank" style="outline: 0; border: 0 none;">
                                     <img alt="추후 메일 수신을 원하지 않으시면 여기 수신거부를 클릭하여 주시기 바랍니다."
                                       src="https://chaebonggi.github.io/jobaba2023/html/wz/common/footer_04.png"
                                       style="vertical-align: top; border: 0"
