--- a/html/corp/learning02.html
+++ b/html/corp/learning02.html
@@ -61,7 +61,19 @@
                             <tbody>
                               <tr>
                                 <td>
-                                  <img src="https://chaebonggi.github.io/jobabamain/html/corp/images/learning02/01.png" alt="2024 경기도 일자리재단 취업교육 플랫폼" width="780" style="display: block;">
+                                  <img src="https://chaebonggi.github.io/jobabamain/html/corp/images/learning02/02.png" alt="2024 경기도 일자리재단 취업교육 플랫폼" width="780" style="display: block;">
+                                </td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <a href="https://m.site.naver.com/1sNCK" target="_blank">
+                                      <img src="https://chaebonggi.github.io/jobabamain/html/corp/images/learning02/03.png" alt="대기업 신청방법" width="780" style="display: block;">
+                                    </a>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <img src="https://chaebonggi.github.io/jobabamain/html/corp/images/learning02/04.png" alt="2024 경기도 일자리재단 취업교육 플랫폼" width="780" style="display: block;">
                                 </td>
                               </tr>
                               <tr>
