--- a/html/corp/learning02.html
+++ b/html/corp/learning02.html
@@ -67,7 +67,7 @@
                               <tr>
                                 <td>
                                   <a href="https://m.site.naver.com/1sNCd" target="_blank">
-                                      <img src="https://chaebonggi.github.io/jobabamain/html/corp/images/learning02/03.png" alt="대기업 신청방법" width="780" style="display: block;">
+                                      <img src="https://chaebonggi.github.io/jobabamain/html/corp/images/learning02/03.jpg" alt="대기업 신청방법" width="780" style="display: block;">
                                     </a>
                                 </td>
                               </tr>
