--- a/index.html
+++ b/index.html
@@ -343,6 +343,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/corp/learning01.html" class="preview" target="_blank">러닝센터 뉴스레터_01</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz334.html" class="preview" target="_blank">뉴스레터 334호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
