--- a/html/thema/09.html
+++ b/html/thema/09.html
@@ -34,7 +34,7 @@
 		<article class="mainVisual">
 			<div class="innerSection">
 				<div class="titWrap">
-					<h2><img src="./images/20240909/main_tit.png" alt="걱정은 뒤로 기회 앞으로 경기도 청년 면접수당"></h2>
+					<h2><img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240909/main_tit.png" alt="걱정은 뒤로 기회 앞으로 경기도 청년 면접수당"></h2>
 				</div>
 				<div class="mainInfo">
 					<div class="infoBox">
@@ -92,7 +92,7 @@
 		<article class="cont01">
 			<div class="innerSection">
 				<div class="titWrap">
-					<h3><img src="./images/20240909/cont01_tit.png" alt="청년면접수당"></h3>
+					<h3><img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240909/cont01_tit.png" alt="청년면접수당"></h3>
 					<p>궁금해요 궁금해~!!</p>
 					<span>가장 많이 묻는 질문</span>
 				</div>
@@ -232,19 +232,19 @@
 							<div class="item">
 								<p class="title">면접 확인서<br> <span>대체 서약서</span></p>
 								<div class="txtItem">
-									<span class="num"><img src="./images/20240909/num_icon01.png" alt="1번"></span>
+									<span class="num"><img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240909/num_icon01.png" alt="1번"></span>
 									<p class="fcBlue02">양식(붙임)활용<br>
 										신청자 본인이 작성 및 날인</p>
 									<p class="etcTxt"><span>* 사업 상세페이지 첨부자료</span></p>
 								</div>
 								<div class="imgItem">
-									<img src="./images/20240909/box06_img01.png" alt="면접확인서 대체 서약서">
+									<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240909/box06_img01.png" alt="면접확인서 대체 서약서">
 								</div>
 							</div>
 							<div class="item">
 								<p class="title"><span>면접대상자임</span>을<br> 증빙하는 서류</p>
 								<div class="txtItem">
-									<span class="num"><img src="./images/20240909/num_icon02.png" alt="2번"></span>
+									<span class="num"><img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240909/num_icon02.png" alt="2번"></span>
 									<p class="fcBlue02">면접 참석 안내문</p>
 									<p class="etcTxt">(문자/이메일)</p>
 								</div>
@@ -267,7 +267,7 @@
 							<div class="item">
 								<p class="title"><span>면접 당일 응시</span>를<br> 증빙하는 서류</p>
 								<div class="txtItem">
-									<span class="num"><img src="./images/20240909/num_icon03.png" alt="3번"></span>
+									<span class="num"><img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240909/num_icon03.png" alt="3번"></span>
 									<p class="fcBlue02">면접 결과 통보</p>
 									<p class="etcTxt">(문자/이메일)</p>
 								</div>
@@ -298,7 +298,7 @@
 		</article>
 		<article class="cont02">
 			<div class="innerSection">
-				<h3><img src="./images/20240909/cont02_tit.png" alt="청년면접수당 신청은 어디서 해야 될까요?"></h3>
+				<h3><img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240909/cont02_tit.png" alt="청년면접수당 신청은 어디서 해야 될까요?"></h3>
 				<div class="linkBtn">
 					<a href="https://apply.jobaba.net/bsns/bsnsDetailView.do?bsnsSeq=3257" target="_blank"><span class="gBold">지금 바로 신청하기</span></a>
 				</div>
