--- a/html/thema/09.html
+++ b/html/thema/09.html
@@ -148,15 +148,19 @@
 						<ul class="list02">
 							<li>
 								<div class="listBox">
-									<p>전화, 문자 면접의 경우<br>
-										면접전형으로 인정되지 않습니다.</p>
+									<div class="tBox">
+										<p>전화, 문자 면접의 경우<br>
+											면접전형으로 인정되지 않습니다.</p>
+									</div>
 								</div>
 							</li>
 							<li>
 								<div class="listBox">
-									<p>다만, 화상회의 프로그램을 통한 면접은<br>
-										<span class="gBold">채용 프로세스상 면접전형으로<br>
-										명시되어 있는 경우에 한해 신청 가능</span>합니다.</p>
+									<div class="tBox">
+										<p>다만, 화상회의 프로그램을 통한 면접은<br>
+											<span class="gBold">채용 프로세스상 면접전형으로<br>
+											명시되어 있는 경우에 한해 신청 가능</span>합니다.</p>
+									</div>
 								</div>
 							</li>
 						</ul>
@@ -185,11 +189,11 @@
 									<li>
 										<span class="title">면접확인서</span>
 										<p>
-											응시자 성명, 생년월일, 면접참여일자,<br>
-											면접 기업 정보, 기업 직인 및 인사담당자 날인이<br>
+											응시자 성명, 생년월일, 면접참여일자,<br class="forMo">
+											면접 기업 정보, 기업 직인 및 인사담당자 날인이<br class="forMo">
 											확인되는 면접확인서류
 										</p>
-										<p class="txt02">*면접확인서 서식은  ‘경기도일자리재단’홈페이지에서<br>
+										<p class="txt02">*면접확인서 서식은  ‘경기도일자리재단’홈페이지에서<br class="forMo">
 											다운로드하거나 면접 기업 자체 양식 활용 가능</p>
 									</li>
 								</ul>
@@ -203,8 +207,8 @@
 							<span class="gBold fcBlue02">공고문 삭제(마감)일 경우</span> 어떻게 해야 하나요?</p>
 					</div>
 					<div class="txtBox">
-						<p class="txt fcBlue02">채용공고문 삭제 및 마감 등의 사유로 제출이 어려운 경우,<br>
-							면접 기업의 구인사실 및 면접 전형 진행 사실을 확인할 수 있는<br>
+						<p class="txt fcBlue02">채용공고문 삭제 및 마감 등의 사유로 제출이 어려운 경우,<br class="forMo">
+							면접 기업의 구인사실 및 면접 전형 진행 사실을 확인할 수 있는<br class="forMo">
 							증빙서류를 반드시 제출해야 합니다.</p>
 						<div class="listBox">
 							<p class="title">채용공고문 유사 증빙서류 예시</p>
@@ -255,14 +259,6 @@
 									<p class="fcBlue02">서류 전형 후<br>
 										면접 전형이 명기된 공고문</p>
 								</div>
-								<div class="txtItem lineB">
-									<p class="fcBlue02">면접 참석 안내를 위해 통화한 기록</p>
-									<p class="etcTxt">(통화녹음, 녹취록 및  통화내역<em>(날짜표기 필수)</em>등)</p>
-									<span class="plusIcon"></span>
-									<p class="fcBlue02">해당 연락처가<br>
-										기업 당당자임에 대한 증빙자료</p>
-									<p class="etcTxt">(명함, 홈페이지 캡쳐, 이메일 등)</p>
-								</div>
 							</div>
 							<div class="item">
 								<p class="title"><span>면접 당일 응시</span>를<br> 증빙하는 서류</p>
@@ -270,17 +266,6 @@
 									<span class="num"><img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240909/num_icon03.png" alt="3번"></span>
 									<p class="fcBlue02">면접 결과 통보</p>
 									<p class="etcTxt">(문자/이메일)</p>
-								</div>
-								<div class="txtItem lineB">
-									<p class="fcBlue02">면접 당일 면접장에서 촬영한 사진</p>
-									<p class="etcTxt">(회사명 등을 배경으로 본인얼굴 또는 수험표가
-										표출되어 면접 응시를 확인할 수 있어야 함)<br><span>* 단순 건물 및 간판 사진은 불가</span></p>
-								</div>
-								<div class="txtItem lineB">
-									<p class="fcBlue02">면접 시 받은 기업 담당자 명함</p>
-									<p class="etcTxt">(면접 응시 여부 확인을 위해 서류 검증 시
-										해당 기업에 연락할 수 있으며, 이를 통해
-										면접 사실이 확인되지 않는 경우 미선정)</p>
 								</div>
 								<div class="txtItem lineB">
 									<p class="fcBlue02">면접 참석/결과와 관련 기업<br>
