--- a/index.html
+++ b/index.html
@@ -348,6 +348,16 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz334.html" class="preview" target="_blank">뉴스레터 334호</a></td>
 			</tr>
+			<tr class="thema">
+				<td></td>
+				<td>테마</td>
+				<td><a href="html/thema/09.html" class="preview" target="_blank">테마 9호 경기도 청년 면접수당</a></td>
+			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz335.html" class="preview" target="_blank">뉴스레터 335호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
