--- a/index.html
+++ b/index.html
@@ -358,6 +358,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz335.html" class="preview" target="_blank">뉴스레터 335호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz336.html" class="preview" target="_blank">뉴스레터 336호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
