--- a/index.html
+++ b/index.html
@@ -368,6 +368,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/corp/corp09.html" class="preview" target="_blank">기업회원 뉴스레터 9월호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz337.html" class="preview" target="_blank">뉴스레터 337호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
