--- a/index.html
+++ b/index.html
@@ -373,6 +373,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz337.html" class="preview" target="_blank">뉴스레터 337호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz338.html" class="preview" target="_blank">뉴스레터 338호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
