--- a/index.html
+++ b/index.html
@@ -378,6 +378,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz338.html" class="preview" target="_blank">뉴스레터 338호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/coupang01.html" class="preview" target="_blank">쿠팡 뉴스레터 1호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
