--- a/html/thema/10.html
+++ b/html/thema/10.html
@@ -586,6 +586,9 @@
 												</p>												
 											</li>
 										</ul>
+										<div class="tagList">
+											<span>#50개 기업 참여</span>
+										</div>
 									</div>
 									<p class="linkBtn">자세히보기 →</p>
 								</a></li> 
