--- a/index.html
+++ b/index.html
@@ -383,6 +383,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/coupang01.html" class="preview" target="_blank">쿠팡 뉴스레터 1호</a></td>
 			</tr>
+			<tr class="thema">
+				<td></td>
+				<td>테마</td>
+				<td><a href="html/thema/10.html" class="preview" target="_blank">테마 10호 경기도 일자리박람회</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
