--- a/index.html
+++ b/index.html
@@ -388,6 +388,11 @@
 				<td>테마</td>
 				<td><a href="html/thema/10.html" class="preview" target="_blank">테마 10호 경기도 일자리박람회</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz339.html" class="preview" target="_blank">뉴스레터 339호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
